force-app/main/default/objects/ECM_MS_Doctype__c/ECM_MS_Doctype__c.object-meta.xml
<CustomObject>
    <label>ECM MS Doctype</label>
    <nameField>
        <displayFormat>ECM MS Doctype-{000}</displayFormat>
        <label>ECM MS Doctype Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ECM MS Doctypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>