force-app/main/default/objects/ECM_MS_Doctype__c/fields/Archival_Period__c.field-meta.xml
<CustomField>
    <fullName>Archival_Period__c</fullName>
    <description>Retention period before archival</description>
    <label>Archival Period</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>