force-app/main/default/objects/ECM_MS_Doctype__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Received document from channel (01 = Branch, 02 = Contact Center, &lt;Blank&gt; = No specific input channel)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>