force-app/main/default/objects/ECM_MS_Doctype__c/fields/Disposal_Period__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Period__c</fullName>
    <description>Retention period before delete</description>
    <label>Disposal Period</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>