force-app/main/default/objects/ECM_MS_Doctype__c/fields/Doc_Location__c.field-meta.xml
<CustomField>
    <fullName>Doc_Location__c</fullName>
    <description>FileNet Path (Directory)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Doc Location</label>
    <length>772</length>
    <type>LongTextArea</type>
</CustomField>