force-app/main/default/objects/ECM_MS_Doctype__c/fields/Doc_Template__c.field-meta.xml
<CustomField>
    <fullName>Doc_Template__c</fullName>
    <description>FileNet Document Template Name (Ex. S2ODocument)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Doc Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>