force-app/main/default/objects/ECM_MS_Doctype__c/fields/Document_Object__c.field-meta.xml
<CustomField>
    <fullName>Document_Object__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Input object name exp: Case, Account, lead</inlineHelpText>
    <label>Document Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>