force-app/main/default/objects/ECM_MS_Doctype__c/fields/Domain_Folder__c.field-meta.xml
<CustomField>
    <fullName>Domain_Folder__c</fullName>
    <description>Document Domain</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Domain Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>