force-app/main/default/objects/ECM_MS_Doctype__c/fields/Expiry_Period__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Period__c</fullName>
    <description>Period before document expire</description>
    <label>Expiry_Period</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>