force-app/main/default/objects/ECM_MS_Doctype__c/fields/Function_Folder__c.field-meta.xml
<CustomField>
    <fullName>Function_Folder__c</fullName>
    <description>Document Function</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Function Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>