force-app/main/default/objects/ECM_MS_Doctype__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>External Key, combining following fields:
SOURCE+CHANNEL+SEGMENT+TYPE_CODE</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Key</label>
    <length>25</length>
    <type>Text</type>
</CustomField>