force-app/main/default/objects/ECM_MS_Doctype__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <description>FileNet Repository Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Repository</label>
    <length>20</length>
    <type>Text</type>
</CustomField>