force-app/main/default/objects/ECM_MS_Doctype__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Customer Type (P=Personal, C=Commercial)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Segment</label>
    <length>3</length>
    <type>Text</type>
</CustomField>