force-app/main/default/objects/ECM_MS_Doctype__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Application Code (Ex. A0350)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>