force-app/main/default/objects/ECM_MS_Doctype__c/fields/Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Type_Code__c</fullName>
    <description>Document Type Code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>