force-app/main/default/objects/ECM_MS_Doctype__c/fields/Type_Name_TH__c.field-meta.xml
<CustomField>
    <fullName>Type_Name_TH__c</fullName>
    <description>Document Type Name - Thai Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type Name TH</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>