force-app/main/default/objects/ECM_MS_Doctype__c/fields/Type_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Type_Short_Name__c</fullName>
    <description>Document Short Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type Short Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>